--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
+/*
+Colors
+
+white:#ffffff
+off-white:#F9FFFE
+off-white-2:#CBC5C5
+primary-green:#4CA456
+grey:#394241
+
+
+*/
+
+*{
+  margin:0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body
+{
+  font-family: 'Montserrat',Arial;
+  font-size: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App__navbar
+{
+  position: fixed;
+  top:0;
+  background-color: #ffffff;
+  width: 100%;
+  height: 4rem;
+  z-index: 100;
+  box-shadow: 0px 2px 6px;
+}
+.App__navbar_logo_box
+{
+  position: absolute;
+  left: 4%;
+  display: inline-block;
+  width: 16rem;
+  height: 5rem;
+  float: left;
+  
+}
+.App__navbar_link_div
+{
+  display:'inline-block';
+  padding:0rem;
+  margin:0;
+  position:absolute;
+  top:0.2rem;
+  left:60rem;
+  width:16rem;
+  height: 4rem;
+}
+.App__navbar_link
+{
+  display:inline-block;
+  margin:0;
+  padding:0.5rem 0.6rem;
+  margin-left:0.4rem; 
+}
+.App__navbar_link:hover{
+  background-color: #CBC5C5;
+  cursor: pointer;
+}
+.Active__link{
+  background-color: #CBC5C5;
+}
+.App__sidebar{
+  position: absolute;
+  top:4rem;
+  height:100vh;
+  width:28%;
+  background-color:#F9FFFE;
+  float:left;
+  position: fixed;
+  box-shadow: 2px 0px 6px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.App__sidebar_titlebox{
+  width:100%;
+  height: 10vh;
+  margin-top: 1rem;
+}
+
+.App__sidebar_title{
+  width:100%;
+  color:#4CA456;
+  margin: auto;
+  font-size: 2rem;
+}
+
+.App__sidebar_categorybox{
+  width:100%;
+  height: 10vh;
+  display: block;
+  margin-top: 0.8rem; 
+  background-color: #4CA456;
   color: white;
+  
+}
+.App__sidebar_category{
+  font-size: 1.5rem;
+  margin-left:6rem;
+  padding: 1rem;
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
+.App__sidebar_categorybox:hover
+{
+  background-color: #394241;
+  color:#4CA456; 
+  cursor: pointer;
+}
+.Category__Active
+{
+  background-color: #394241;
+  color:#4CA456; 
+}
+.App__body{
+ 
+  left:23.5rem;
+  height:100vh;
+  width:72%;
+  background-color: #CBC5C5;
+  float:right;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
