--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body
 {
   font-family: 'Montserrat',Arial;
   font-size: 10px;
+  background-color: #CBC5C5;
 }
 
 .App__navbar
@@ -121,12 +122,82 @@ body
   color:#4CA456; 
 }
 .App__body{
- 
-  left:23.5rem;
+  position:absolute;
+  left:25rem;
+  top:6rem;
   height:100vh;
-  width:72%;
-  background-color: #CBC5C5;
+  width:70%;
   float:right;
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+  grid-gap: 1rem 1rem;
+  
+
 
 }
+.App__body_card
+{
+  width: 18rem;
+  height:28rem;
+  box-shadow: 2px 2px 6px;
+  background-color: #ffffff;
+}
 
+.App__body_card_imagebox{
+  width:17rem;
+  height:14rem;
+  margin: auto;
+  margin-top:0.5rem; 
+  background-color: #4CA456;
+  
+  
+}
+
+.App__body_card_image{
+  width:100%;
+  height:100%; 
+}
+.App__body_card_titlebox{
+  width:17rem;
+  height:2.4rem;
+  margin: auto;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: normal;
+  padding: 0.2rem;
+   
+ 
+}
+.App__body_card_pricebox{
+  width:17rem;
+  height:2.4rem;
+  margin: auto;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-top:0.5rem; 
+  padding: 0.1rem;
+}
+.App__body_card_qtybox{
+  width:17rem;
+  height:2.4rem;
+  margin: auto;
+  text-align: center;
+  font-size: 1rem;
+  display: inline;
+  padding: 0.1rem;
+}
+.App__body_card_qtybox.h2.select{
+  font-size: 2rem;
+  height: 2rem;
+}
+.App__body_card_button{
+  width: 16rem;
+  height: 2.8rem;
+  background-color: #394241;
+  font-size: 1.8rem;
+  color: #ffffff;
+  cursor: pointer;
+  border-style: solid;
+  
+}
