--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body
   position:absolute;
   top:0.2rem;
   left:60rem;
-  width:16rem;
+  width:20rem;
   height: 4rem;
 }
 .App__navbar_link
@@ -132,7 +132,20 @@ body
   grid-template-columns:1fr 1fr 1fr;
   grid-gap: 1rem 1rem;
   
+}
 
+.App__other_panels{
+
+  position:absolute;
+  left:0rem;
+  top:4rem;
+  height:100vh;
+  width:100%;
+  float:right;
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+  grid-gap: 1rem 1rem;
+  
 
 }
 
